@@ -2248,3 +2248,9 @@ habits.
 
 -------------------------------------------------------------------------------
 
+Sun Oct 14 11:13:21 PDT 2001
+(KainX)
+
+Added the ability to specify a timezone for E-Time.
+
+-------------------------------------------------------------------------------
